Deployment/Grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: mobin-monitor
  annotations:
    kubernetes.io/ingress.class: traefik
  name: grafana-ingress
spec:
  rules:
  - host: mobin-ump-dashboard.com.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
